--- a/package.json
+++ b/package.json
@@ -11,15 +11,10 @@
   "dependencies": {
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
-    "lru-cache": "^10.0.0",
     "next": "13.4.12",
-    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-infinite-scroll-component": "^6.1.0",
-    "react-redux": "^8.1.2",
-    "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "react-infinite-scroll-component": "^6.1.0"
   }
 }
